<resources>
    <string name="app_name">Skeleton Keyboard</string>
    <string name="ime_name">Skeleton Keyboard</string>
    <string name="subtype_en_US">English (United States)</string>
    <!-- Unicode References -->
    <!-- Numbers-->
    <string name="kbtn_1">\u0031</string>
    <string name="kbtn_2">\u0032</string>
    <string name="kbtn_3">\u0033</string>
    <string name="kbtn_4">\u0034</string>
    <string name="kbtn_5">\u0035</string>
    <string name="kbtn_6">\u0036</string>
    <string name="kbtn_7">\u0037</string>
    <string name="kbtn_8">\u0038</string>
    <string name="kbtn_9">\u0039</string>
    <string name="kbtn_0">\u0030</string>
    <!-- Alphabet in Caps -->
    <string name="kbtn_A">\u0041</string>
    <string name="kbtn_B">\u0042</string>
    <string name="kbtn_C">\u0043</string>
    <string name="kbtn_D">\u0044</string>
    <string name="kbtn_E">\u0045</string>
    <string name="kbtn_F">\u0046</string>
    <string name="kbtn_G">\u0047</string>
    <string name="kbtn_H">\u0048</string>
    <string name="kbtn_I">\u0049</string>
    <string name="kbtn_J">\u004A</string>
    <string name="kbtn_K">\u004B</string>
    <string name="kbtn_L">\u004C</string>
    <string name="kbtn_M">\u004D</string>
    <string name="kbtn_N">\u004E</string>
    <string name="kbtn_O">\u004F</string>
    <string name="kbtn_P">\u0050</string>
    <string name="kbtn_Q">\u0051</string>
    <string name="kbtn_R">\u0052</string>
    <string name="kbtn_S">\u0053</string>
    <string name="kbtn_T">\u0054</string>
    <string name="kbtn_U">\u0055</string>
    <string name="kbtn_V">\u0056</string>
    <string name="kbtn_W">\u0057</string>
    <string name="kbtn_X">\u0058</string>
    <string name="kbtn_Y">\u0059</string>
    <string name="kbtn_Z">\u005A</string>
    <!-- Alphabet in Lower Caps -->
    <string name="kbtn_a">\u0061</string>
    <string name="kbtn_b">\u0062</string>
    <string name="kbtn_c">\u0063</string>
    <string name="kbtn_d">\u0064</string>
    <string name="kbtn_e">\u0065</string>
    <string name="kbtn_f">\u0066</string>
    <string name="kbtn_g">\u0067</string>
    <string name="kbtn_h">\u0068</string>
    <string name="kbtn_i">\u0069</string>
    <string name="kbtn_j">\u006A</string>
    <string name="kbtn_k">\u006B</string>
    <string name="kbtn_l">\u006C</string>
    <string name="kbtn_m">\u006D</string>
    <string name="kbtn_n">\u006E</string>
    <string name="kbtn_o">\u006F</string>
    <string name="kbtn_p">\u0070</string>
    <string name="kbtn_q">\u0071</string>
    <string name="kbtn_r">\u0072</string>
    <string name="kbtn_s">\u0073</string>
    <string name="kbtn_t">\u0074</string>
    <string name="kbtn_u">\u0075</string>
    <string name="kbtn_v">\u0076</string>
    <string name="kbtn_w">\u0077</string>
    <string name="kbtn_x">\u0078</string>
    <string name="kbtn_y">\u0079</string>
    <string name="kbtn_z">\u007A</string>
    <!-- Symbols -->
    <string name="kbtn_plus">\u002B</string>
    <!-- Bottom Row -->
    <string name="kbtn_numpad">123</string>
    <string name="kbtn_comma">\u002C</string>
    <string name="kbtn_abc">ABC</string>
    <string name="kbtn_period">\u002E</string>
    <string name="kbtn_enter">enter</string>
    <string name="kbtn_delete">delete</string>
    <string name="kbtn_done">done</string>
    <!-- Tags -->
    <string name="kbtag_1">1</string>
    <string name="kbtag_2">2</string>
    <string name="kbtag_3">3</string>
    <string name="kbtag_4">4</string>
    <string name="kbtag_5">5</string>
    <string name="kbtag_6">6</string>
    <string name="kbtag_7">7</string>
    <string name="kbtag_8">8</string>
    <string name="kbtag_9">9</string>
    <string name="kbtag_0">0</string>
    <string name="kbtag_a">a</string>
    <string name="kbtag_b">b</string>
    <string name="kbtag_c">c</string>
    <string name="kbtag_d">d</string>
    <string name="kbtag_e">e</string>
    <string name="kbtag_f">f</string>
    <string name="kbtag_g">g</string>
    <string name="kbtag_h">h</string>
    <string name="kbtag_i">i</string>
    <string name="kbtag_j">j</string>
    <string name="kbtag_k">k</string>
    <string name="kbtag_l">l</string>
    <string name="kbtag_m">m</string>
    <string name="kbtag_n">n</string>
    <string name="kbtag_o">o</string>
    <string name="kbtag_p">p</string>
    <string name="kbtag_q">q</string>
    <string name="kbtag_r">r</string>
    <string name="kbtag_s">s</string>
    <string name="kbtag_t">t</string>
    <string name="kbtag_u">u</string>
    <string name="kbtag_v">v</string>
    <string name="kbtag_w">w</string>
    <string name="kbtag_x">x</string>
    <string name="kbtag_y">y</string>
    <string name="kbtag_z">z</string>
    <string name="kbtag_A">A</string>
    <string name="kbtag_B">B</string>
    <string name="kbtag_C">C</string>
    <string name="kbtag_D">D</string>
    <string name="kbtag_E">E</string>
    <string name="kbtag_F">F</string>
    <string name="kbtag_G">G</string>
    <string name="kbtag_H">H</string>
    <string name="kbtag_I">I</string>
    <string name="kbtag_J">J</string>
    <string name="kbtag_K">K</string>
    <string name="kbtag_L">L</string>
    <string name="kbtag_M">M</string>
    <string name="kbtag_N">N</string>
    <string name="kbtag_O">O</string>
    <string name="kbtag_P">P</string>
    <string name="kbtag_Q">Q</string>
    <string name="kbtag_R">R</string>
    <string name="kbtag_S">S</string>
    <string name="kbtag_T">T</string>
    <string name="kbtag_U">U</string>
    <string name="kbtag_V">V</string>
    <string name="kbtag_W">W</string>
    <string name="kbtag_X">X</string>
    <string name="kbtag_Y">Y</string>
    <string name="kbtag_Z">Z</string>
    <string name="kbtag_abc">ABC</string>
    <string name="kbtag_numpad">123</string>
    <string name="kbtag_space">SPACE</string>
    <string name="kbtag_enter">ENTER</string>
    <string name="kbtag_delete">DELETE</string>
    <string name="kbtag_done">DONE</string>
    <string name="kbtag_shift">SHIFT</string>
    <string name="kbtag_plus">plus</string>
    <string name="kbtag_comma">comma</string>
    <string name="kbtag_period">period</string>
</resources>