<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseQ"
            android:text="@string/kbtn_Q"
            android:tag="@string/kbtag_Q"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseW"
            android:text="@string/kbtn_W"
            android:tag="@string/kbtag_W"
            android:layout_width="55dp" />

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseE"
            android:text="@string/kbtn_E"
            android:tag="@string/kbtag_E"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseR"
            android:text="@string/kbtn_R"
            android:tag="@string/kbtag_R"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseT"
            android:text="@string/kbtn_T"
            android:tag="@string/kbtag_T"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseY"
            android:text="@string/kbtn_Y"
            android:tag="@string/kbtag_Y"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseU"
            android:text="@string/kbtn_U"
            android:tag="@string/kbtag_U"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseI"
            android:text="@string/kbtn_I"
            android:tag="@string/kbtag_I"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseO"
            android:text="@string/kbtn_O"
            android:tag="@string/kbtag_O"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseP"
            android:text="@string/kbtn_P"
            android:tag="@string/kbtag_P"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseA"
            android:text="@string/kbtn_A"
            android:tag="@string/kbtag_A"/>

        <Button
            style="@style/LowerCaseKeyStyle"
            android:id="@+id/uppercaseS"
            android:text="@string/kbtn_S"
            android:tag="@string/kbtag_S"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseD"
            android:text="@string/kbtn_D"
            android:tag="@string/kbtag_D"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseF"
            android:text="@string/kbtn_F"
            android:tag="@string/kbtag_F"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseG"
            android:text="@string/kbtn_G"
            android:tag="@string/kbtag_G"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseH"
            android:text="@string/kbtn_H"
            android:tag="@string/kbtag_H"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseJ"
            android:text="@string/kbtn_J"
            android:tag="@string/kbtag_J"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseK"
            android:text="@string/kbtn_K"
            android:tag="@string/kbtag_K"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseL"
            android:text="@string/kbtn_L"
            android:tag="@string/kbtag_L"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageButton
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseshift"
            android:tag="@string/kbtag_shift"
            android:src="@drawable/keyboard_shift_uppercase_svgrepo_com"
            android:contentDescription="@string/kbtag_shift" />

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseZ"
            android:text="@string/kbtn_Z"
            android:tag="@string/kbtag_Z"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseX"
            android:text="@string/kbtn_X"
            android:tag="@string/kbtag_X"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseC"
            android:text="@string/kbtn_C"
            android:tag="@string/kbtag_C"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseV"
            android:text="@string/kbtn_V"
            android:tag="@string/kbtag_V"/>

        <Button
            style="@style/LowerCaseKeyStyle"
            android:id="@+id/uppercaseB"
            android:text="@string/kbtn_B"
            android:tag="@string/kbtag_B"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseN"
            android:text="@string/kbtn_N"
            android:tag="@string/kbtag_N"/>

        <Button
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercaseM"
            android:text="@string/kbtn_M"
            android:tag="@string/kbtag_M"/>

        <ImageButton
            style="@style/UpperCaseKeyStyle"
            android:id="@+id/uppercasedelete"
            android:tag="@string/kbtag_delete"
            android:src="@drawable/delete_svgrepo_com"
            android:contentDescription="@string/kbtag_shift" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:weightSum="36">

        <Button
            style="@style/LastRowStyle"
            android:id="@+id/uppercase123"
            android:text="@string/kbtn_numpad"
            android:tag="@string/kbtag_numpad"
            android:layout_weight="6"/>

        <Button
            style="@style/LastRowStyle"
            android:id="@+id/uppercaseabc"
            android:text="@string/kbtn_abc"
            android:tag="@string/kbtag_abc"
            android:layout_weight="6" />

        <Button
            style="@style/LastRowStyle"
            android:id="@+id/uppercasecomma"
            android:text="@string/kbtn_comma"
            android:tag="@string/kbtag_comma"/>

        <Button
            style="@style/LastRowStyle"
            android:id="@+id/uppercasespace"
            android:tag="@string/kbtag_space"
            android:layout_weight="24"/>

        <Button
            style="@style/LastRowStyle"
            android:id="@+id/uppercaseperiod"
            android:text="@string/kbtn_period"
            android:tag="@string/kbtag_period"/>

        <ImageButton
            style="@style/LowerCaseKeyStyle"
            android:id="@+id/uppercasedone"
            android:tag="@string/kbtag_done"
            android:src="@drawable/enter_svgrepo_com"
            android:contentDescription="@string/kbtag_done" />
    </LinearLayout>
</LinearLayout>